<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">WeatherTZ</string>

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
     <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_label">City</string>
    <string name="pref_location_default">Oakland</string>

    <string name="pref_units_key">unit</string>
    <string name="pref_unit_title">Unit</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_unit_imperial">imperial</string>
    <string name="pref_header_notifications">Notification</string>
    <string name="pref_header_data_sync">Synchronization</string>
    <string name="pref_ringtone_silent">RingTone</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed format in mph [CHAR LIMIT=NONE] -->
    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
        %.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
        %.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%.0f</xliff:g> hPa</string>

    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%.0f</xliff:g> %%</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_sync">last_sync</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.muchbeer.king</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>




    <string-array name="pref_unit_values">
        <item>imperial</item>
        <item>metric</item>
    </string-array>

    <string-array name="pref_unit_options">
        <item>imperial</item>
        <item>metric</item>
    </string-array>


</resources>
